# resume_critique

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
config/: constants.py  prompts.py  schema.py
core/: job_description_agent.py  new_resume_agent.py
model/: ResumeRequest.py
services/: openai_services.py
utils/: pdf_text_organize.py  text_extract_from_pdf.py  utils.py
